--- a/loki-local-config.yaml
+++ b/loki-local-config.yaml
@@ -2,9 +2,8 @@ auth_enabled: false
 
 server:
   http_listen_port: 3100
-  grpc_listen_port: 9096
   log_level: debug
-  grpc_server_max_concurrent_streams: 1000
+  
 
 common:
   instance_addr: 127.0.0.1
@@ -38,16 +37,23 @@ schema_config:
         prefix: index_
         period: 24h
 
-pattern_ingester:
-  enabled: true
-  metric_aggregation:
-    loki_address: localhost:3100
+ingester:
+  lifecycler:
+    ring:
+      kvstore:
+        store: inmemory
+      replication_factor: 1
+  chunk_idle_period: 5m
+  max_chunk_age: 1h
+  chunk_retain_period: 30s
+  wal:
+    enabled: true
+    dir: /tmp/loki/wal
 
-ruler:
-  alertmanager_url: http://localhost:9093
+storage_config:
+  filesystem:
+    directory: /tmp/loki/chunks
 
-frontend:
-  encoding: protobuf
 
 # By default, Loki will send anonymous, but uniquely-identifiable usage and configuration
 # analytics to Grafana Labs. These statistics are sent to https://stats.grafana.org/
